Day 11 HTML and CSS File

--- a/day-11/index.html
+++ b/day-11/index.html
@@ -7,16 +7,17 @@
     <title>Day 11</title>
 </head>
 <body>
-    <div class="frame">
-        <div class="invisible-men">
-            <div class="leg left">
-                <div class="shoe"></div>
-            </div>
-            <div class="leg right">
-                <div class="shoe"></div>
-            </div>
-        </div>
-        <div class="floor"></div>
-    </div>
+    <div class="wrapper">
+        <img
+          class="boot left"
+          src="https://100dayscss.com/codepen/doc-martens.svg"
+          alt=""
+        />
+        <img
+          class="boot right"
+          src="https://100dayscss.com/codepen/doc-martens.svg"
+          alt=""
+        />
+      </div>
 </body>
 </html>
