--- a/day-26/index.html
+++ b/day-26/index.html
@@ -36,6 +36,6 @@
               <div class="button">Ok</div>	
         </div>
       </div>
-      
+      <script src="script.js"></script>
 </body>
 </html>
