--- a/day-41/index.html
+++ b/day-41/index.html
@@ -3,26 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Day 41</title>
 </head>
 <body>
-    <div id="error-card" class="card">
-        <div class="content">
-        <span class="sign">
-          <svg viewBox="0 0 576 512" width="40" title="exclamation-triangle">
-              <path fill="#D32F2F" d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z" />
-        </svg>
-        </span>
-        <h4 class="title">Oh snap !</h4>
-        <p class="text">An error has occured while creating an error report.</p>
+    <div class="frame">
+        <div class="modal">
+          <img src="https://100dayscss.com/codepen/alert.png" width="44" height="38" />
+              <span class="title">Oh snap!</span>
+              <p>An error has occured while creating an error report.</p>
+              <div class="button">Dismiss</div>
         </div>
-        <button onclick="dismiss()">Dismiss</button>
       </div>
-      <script>
-        function dismiss() {
-         var errorCard = document.getElementById("error-card");
-         errorCard.classList.add("fade");
-        }
-      </script>
+      <script src="script.js"></script>
 </body>
 </html>
