--- a/day-51/index.html
+++ b/day-51/index.html
@@ -13,6 +13,6 @@
               <p class='control'onClick='counterToggle()'>&#9658<p>
         </div>
       </div>
-      <script src="app.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
